--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "name": "Create React App Sample",
-  "short_name": "Create React App Sample",
+  "name": "seif2k1.github.io/test1/",
+  "short_name": "seif2k1.github.io/test1/",
   "description": "test",
   "icons": [
     {
